2001-11-28  Hans-Peter Nilsson  <hp@axis.com>

	* config/cris/cris.c: Remove whitespace at end of line.

Wed Nov 28 14:51:23 2001  Douglas B. Rupp  <rupp@gnat.com>

	* config.gcc (i[34567]86-*-interix3*): New case.
	* config/x-interix3, config/interix3.h, config/i386/i386-interix3.h:
	New files.
	
2001-11-28  Richard Henderson  <rth@redhat.com>

	* config/alpha/alpha.md (sibcall_osf_1, sibcall_value_osf_1): Use
	symbolic_operand as the predicate.

2001-11-28  Richard Henderson  <rth@redhat.com>

	* doloop.c (doloop_modify_runtime): Properly select induction
	variable; skip late entry test if biv initializer created by loop.

Wed Nov 28 08:21:47 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* tree.h (EXPR_WFL_LINECOL): Used by Java in node other than
	EXPR_WITH_FILE_LOCATION, so change checks and documentation.

	* tree.h (TREE_VIA_PROTECTED): Update to show can be in TREE_VEC.

	* tree.h: Add missing checks on some macros; make formatting more
	consistent.

	* stor-layout.c (put_pending_size): Look for SAVE_EXPR if not at top
	level; only add to pending_sizes if find it.

	* langhooks.c (lhd_safe_from_p): Add ATTRIBUTE_UNUSED.

	* df.c (iterate_dataflow_sbitmap, iterate_dataflow_bitmap):
	Add casts to remove warnings.

	* Makefile.in (OBJS): Sort alphabetically.

	* print-rtl.c (print_rtx): If RTX code is bad, just say so.
	Also minor cleanups.

Wed Nov 28 06:52:27 2001  Arnaud Charlet  <charlet@ACT-Europe.FR>

	* Makefile.in (ORDINARY_FLAGS_TO_PASS): Remove STAGE_PREFIX.
	(FLAGS_TO_PASS): Add STAGE_PREFIX.
	(SUBDIR_FLAGS_TO_PASS): Apply PREPEND_DOTDOT_TO_RELATIVE_PATH
	to STAGE_PREFIX.

Wed Nov 28 10:42:19 CET 2001  Jan Hubicka  <jh@suse.cz>

	* cse.c (true_dependence_in_rtx): New function.
	(invalidate): Use it.

	* c-common.h (GOTO_FAKE_P): New macro.
	* tree-inline.c (GOTO_FAKE_P): Set.
	* c-tree.texi (GOTO_FAKE_P): Document.

	* varasm.c (assemble_variable): Set reloc to 3 for error_mark
	containing pointers.